WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
220524
REGRESSION(
r268666
) Incorrect vertical position inside grid items with padding
https://bugs.webkit.org/show_bug.cgi?id=220524
Summary
REGRESSION(r268666) Incorrect vertical position inside grid items with padding
alan
Reported
2021-01-11 13:16:53 PST
Created
attachment 417407
[details]
test reduction ssia
Attachments
test reduction
(391 bytes, text/html)
2021-01-11 13:16 PST
,
alan
no flags
Details
Patch
(4.34 KB, patch)
2021-01-13 02:44 PST
,
Sergio Villar Senin
rego
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Radar WebKit Bug Importer
Comment 1
2021-01-11 13:18:29 PST
<
rdar://problem/73010949
>
Sergio Villar Senin
Comment 2
2021-01-13 02:44:58 PST
Created
attachment 417518
[details]
Patch
Manuel Rego Casasnovas
Comment 3
2021-01-13 03:04:30 PST
Comment on
attachment 417518
[details]
Patch View in context:
https://bugs.webkit.org/attachment.cgi?id=417518&action=review
r=me
> Source/WebCore/ChangeLog:3 > + REGRESSION(
r268666
) Incorrect vertical position inside grid/flex with padding
Shouldn't we rename the bug so we don't mention "flex"? It seems unrelated to flexbox and specific to grid layout.
Sergio Villar Senin
Comment 4
2021-01-13 03:54:09 PST
Committed
r271436
: <
https://trac.webkit.org/changeset/271436
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug